fix:feat: rebuilding dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  @apply bg-white dark:bg-dark-100;
 }
 
 .app {
@@ -10,7 +11,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #f0f4f8;
 }
 
 .logo {
